Rename 'docker-compose' to 'docker compose' in CI config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Build Docker image
         run: docker build -t foster_app .
 
-      - name: Run docker-compose
-        run: docker-compose up -d
+      - name: Run docker compose
+        run: docker compose up -d
 
         
       - name: Install dependencies
