--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: docker build -t foster_app .
 
       - name: Run docker compose
-        run: docker compose up -d
+        run: docker compose up -d --wait
 
         
       - name: Install dependencies
